# mangetamain

./: .railwayignore  Dockerfile.data  Dockerfile.railway  README.md  README_OLD.md  config.yaml  data_load.py  docker-compose.yml  index.html  prepro.ipynb  preprocessing.ipynb  preprocessing_metadata.json  pyproject.toml  railway.json  run-tests.sh  run_tests.py  run_tests.sh
coverage/: class_index.html  function_index.html  index.html  status.json  z_01e59f73fcf64f2d___init___py.html  z_01e59f73fcf64f2d_components_py.html  z_10f116d0954b4d86___init___py.html  z_10f116d0954b4d86_data_manager_py.html  z_26d975ae15aaa3af___init___py.html  z_26d975ae15aaa3af_app_py.html  z_4f40da8ab4ee8f2c___init___py.html  z_4f40da8ab4ee8f2c_main_py.html  z_a368990bf8dda31e___init___py.html  z_a368990bf8dda31e_recommendation_engine_py.html  (+3 more)
preprocessing/: .dockerignore  Dockerfile  config.yaml  data_load.html  data_load.py  data_prepro.html  data_prepro.py  genindex.html  index.html  modules.html  objects.inv  pipeline.html  pipeline.py  prepro.ipynb  preprocessing.ipynb  py-modindex.html  pyproject.toml  reco_score.html  reco_score.py  requirements.txt  search.html  searchindex.js
preprocessing/_modules/: data_load.html  data_prepro.html  index.html  pipeline.html  reco_score.html
preprocessing/_sources/: data_load.rst.txt  data_prepro.rst.txt  index.rst.txt  modules.rst.txt  reco_score.rst.txt
preprocessing/docs/source/: conf.py
streamlit-poetry-docker/: .dockerignore  Dockerfile  Dockerfile.test  README.md  app.py  docker-compose.yml  pyproject.toml  reco_score.py
streamlit-poetry-docker/docs/source/: conf.py  index.rst
streamlit-poetry-docker/src/: __init__.py  main.py
streamlit-poetry-docker/src/core/: __init__.py  app.py
streamlit-poetry-docker/src/engines/: __init__.py  recommendation_engine.py
streamlit-poetry-docker/src/managers/: __init__.py  data_manager.py
streamlit-poetry-docker/src/ui/: __init__.py  components.py
streamlit-poetry-docker/src/utils/: __init__.py  config.py  styles.py
(+68 files in other folders)
