[tool.poetry]
name = "preprocessing"
version = "0.1.0"
description = "Data preprocessing for Kit Big Data"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
kagglehub = "^0.2.5"
PyYAML = "^6.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
notebook = "^7.0.0"
jupyterlab = "^4.0.0"
scikit-learn = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"
pylint = "^3.0.0"
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"