[tool.poetry]
name = "streamlit-poetry-docker"
version = "0.1.0"
description = "Streamlit app managed by Poetry inside Docker"
authors = ["You <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"